# WindowsInputMethodDemos

./: README.md
src/Demo1/: CMakeLists.txt  Log.cpp  Log.hpp  ReadMe.md
src/Demo2/: CMakeLists.txt  DllMain.cpp  ReadMe.md
src/Demo3/: CMakeLists.txt  DllMain.cpp  DllServerFunction.cpp  DllServerFunction.hpp  GlobalValues.cpp  GlobalValues.hpp  Log.cpp  Log.hpp  ReadMe.md  RegKeyFunction.cpp  RegKeyFunction.hpp
src/code-gallery-tsf-samples/: CMakeLists.txt
src/code-gallery-tsf-samples/BasicTextService/: CMakeLists.txt
src/code-gallery-tsf-samples/CandidateList/: CMakeLists.txt
src/code-gallery-tsf-samples/Composition/: CMakeLists.txt  TextService.cpp
src/code-gallery-tsf-samples/CompositionStringUnderline/: CMakeLists.txt
src/code-gallery-tsf-samples/IconInLanguageBar/: CMakeLists.txt  Globals.h  TextService.aps
src/code-gallery-tsf-samples/Keyboard/: CMakeLists.txt  Globals.h
src/code-gallery-tsf-samples/PropertyMonitor/: CMakeLists.txt  Globals.h
src/code-gallery-tsf-samples/PropertyTextService/: CMakeLists.txt  Globals.h  StaticProperty.cpp  TextService.cpp
src/code-gallery-tsf-samples/TextInsertion/: CMakeLists.txt
src/code-gallery-tsf-samples/TrackFocus/: CMakeLists.txt
src/code-gallery-tsf-samples/TrackTextChange/: CMakeLists.txt
