cmake_minimum_required(VERSION 3.0)
project(TextServiceFrameDemos)
add_subdirectory(./BasicTextService/)
add_subdirectory(./CandidateList/)
add_subdirectory(./Composition/)
add_subdirectory(./CompositionStringUnderline/)
add_subdirectory(./IconInLanguageBar/)
add_subdirectory(./Keyboard/)
add_subdirectory(./PropertyMonitor/)
add_subdirectory(./PropertyTextService/)
add_subdirectory(./TextInsertion/)
add_subdirectory(./TrackFocus/)
add_subdirectory(./TrackTextChange/)